tests/analyzer/errors/no_main.ray
var main = 1
fn add(a: int, b: int) {}